panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__test_error_assignment_in_if_condition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unexpected token `=` of kind `Equal`
   ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:1:7]
   │
 1 │ #if 1 = 2 + 42
   │       ┬  
   │       ╰── expected one of the following token kinds: []
───╯

Error: assignments are not allowed in preprocessor expressions
   ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:4:10]
   │
 4 │ #if 2 + (3 = 4)
   │          ─────  
───╯

Error: assignments are not allowed in preprocessor expressions
   ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:7:15]
   │
 7 │ #if false && (5 = 6)
   │               ─────  
───╯

Error: unexpected token `+=` of kind `PlusEqual`
    ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:10:7]
    │
 10 │ #if 1 += 2 + 42
    │       ─┬  
    │        ╰── expected one of the following token kinds: ["*", "+", "-", "/", "%", "==", "!=", "<", "<=", ">", ">=", "&", "^", "|", "<<", ">>", "&&", "||", "?"]
────╯

Error: compound assignments are not allowed in preprocessor expressions
    ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:13:10]
    │
 13 │ #if 2 + (3 -= 4)
    │          ──────  
────╯

Error: compound assignments are not allowed in preprocessor expressions
    ╭─[panko/tests/cases/preprocessor/test_error_assignment_in_if_condition.c:16:15]
    │
 16 │ #if false && (5 *= 6)
    │               ──────  
────╯
